--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
